<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nueva"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itsco.edu.listadetareas.NuevaActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="35dp"
        android:id="@+id/txt_titulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_titulo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/txt_titulo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/txt_descripcion"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_descripcion" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/txt_descripcion"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:id="@+id/txt_fecha"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_fecha" />

    <Button
        android:text="@string/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:id="@+id/btn_guardar"
        android:layout_below="@+id/txt_fecha"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp" />

    <Button
        android:text="@string/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:id="@+id/btn_cancelar"
        android:layout_alignBaseline="@+id/btn_guardar"
        android:layout_alignBottom="@+id/btn_guardar"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
